@@ -134,7 +134,7 @@ $_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'Die Sende
 $_lang['goodnews.newsletter_send_process_stopped']                  = 'Prozesse gestoppt';
 $_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'Alle Sendeprozesse wurden deaktiviert!';
 $_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'Die Sendeprozesse konnten nicht deaktiviert werden!';
-$_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
+$_lang['goodnews.newsletter_grid_autorefresh_on']                   = 'Auto-Refresh EIN';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'Sendeprotokoll öffnen';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Sendeprotokoll für Mailing: ';
 $_lang['goodnews.newsletter_sendlog_export_button']                 = 'Exportieren';
