@@ -134,7 +134,7 @@ $_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'The send 
 $_lang['goodnews.newsletter_send_process_stopped']                  = 'Processes Stopped';
 $_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'All send processes have been disabled!';
 $_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'The send processes could not be disabled!';
-$_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
+$_lang['goodnews.newsletter_grid_autorefresh_on']                   = 'Auto-Refresh ON';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'View Send-Log';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Send-Log for Mailing: ';
 $_lang['goodnews.newsletter_sendlog_export_button']                 = 'Export';
