@@ -134,7 +134,7 @@ $_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'Les proce
 $_lang['goodnews.newsletter_send_process_stopped']                  = 'Processus arrêtés';
 $_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'Tous les processus d\'envoi ont été désactivés!';
 $_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'Les processus d\'envoi n\'ont pas pu être désactivés!';
-$_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
+$_lang['goodnews.newsletter_grid_autorefresh_on']                   = 'Auto-Refresh ON';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'Voir Log d\'envoi';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Envoyer les Logs pour le Mailing: ';
 $_lang['goodnews.newsletter_sendlog_export_button']                 = 'Export';
